HW2/y.output
   0  $accept : statement $end

   1  statement :
   2            | statement expression
   3            | statement expression '\n'

   4  expression : expression Plus factor
   5             | expression Minus factor
   6             | factor

   7  factor : factor Mult primary
   8         | factor Div primary
   9         | primary

  10  primary : Realnumber
  11          | Left expression Right
  12          | Minus primary

state 0
	$accept : . statement $end  (0)
	statement : .  (1)

	.  reduce 1

	statement  goto 1


state 1
	$accept : statement . $end  (0)
	statement : statement . expression  (2)
	statement : statement . expression '\n'  (3)

	$end  accept
	Realnumber  shift 2
	Minus  shift 3
	Left  shift 4
	.  error

	expression  goto 5
	factor  goto 6
	primary  goto 7


state 2
	primary : Realnumber .  (10)

	.  reduce 10


state 3
	primary : Minus . primary  (12)

	Realnumber  shift 2
	Minus  shift 3
	Left  shift 4
	.  error

	primary  goto 8


state 4
	primary : Left . expression Right  (11)

	Realnumber  shift 2
	Minus  shift 3
	Left  shift 4
	.  error

	expression  goto 9
	factor  goto 6
	primary  goto 7


5: shift/reduce conflict (shift 11, reduce 2) on Minus
state 5
	statement : statement expression .  (2)
	statement : statement expression . '\n'  (3)
	expression : expression . Plus factor  (4)
	expression : expression . Minus factor  (5)

	Plus  shift 10
	Minus  shift 11
	'\n'  shift 12
	$end  reduce 2
	Realnumber  reduce 2
	Left  reduce 2


state 6
	expression : factor .  (6)
	factor : factor . Mult primary  (7)
	factor : factor . Div primary  (8)

	Mult  shift 13
	Div  shift 14
	$end  reduce 6
	Realnumber  reduce 6
	Plus  reduce 6
	Minus  reduce 6
	Left  reduce 6
	Right  reduce 6
	'\n'  reduce 6


state 7
	factor : primary .  (9)

	.  reduce 9


state 8
	primary : Minus primary .  (12)

	.  reduce 12


state 9
	expression : expression . Plus factor  (4)
	expression : expression . Minus factor  (5)
	primary : Left expression . Right  (11)

	Plus  shift 10
	Minus  shift 11
	Right  shift 15
	.  error


state 10
	expression : expression Plus . factor  (4)

	Realnumber  shift 2
	Minus  shift 3
	Left  shift 4
	.  error

	factor  goto 16
	primary  goto 7


state 11
	expression : expression Minus . factor  (5)

	Realnumber  shift 2
	Minus  shift 3
	Left  shift 4
	.  error

	factor  goto 17
	primary  goto 7


state 12
	statement : statement expression '\n' .  (3)

	.  reduce 3


state 13
	factor : factor Mult . primary  (7)

	Realnumber  shift 2
	Minus  shift 3
	Left  shift 4
	.  error

	primary  goto 18


state 14
	factor : factor Div . primary  (8)

	Realnumber  shift 2
	Minus  shift 3
	Left  shift 4
	.  error

	primary  goto 19


state 15
	primary : Left expression Right .  (11)

	.  reduce 11


state 16
	expression : expression Plus factor .  (4)
	factor : factor . Mult primary  (7)
	factor : factor . Div primary  (8)

	Mult  shift 13
	Div  shift 14
	$end  reduce 4
	Realnumber  reduce 4
	Plus  reduce 4
	Minus  reduce 4
	Left  reduce 4
	Right  reduce 4
	'\n'  reduce 4


state 17
	expression : expression Minus factor .  (5)
	factor : factor . Mult primary  (7)
	factor : factor . Div primary  (8)

	Mult  shift 13
	Div  shift 14
	$end  reduce 5
	Realnumber  reduce 5
	Plus  reduce 5
	Minus  reduce 5
	Left  reduce 5
	Right  reduce 5
	'\n'  reduce 5


state 18
	factor : factor Mult primary .  (7)

	.  reduce 7


state 19
	factor : factor Div primary .  (8)

	.  reduce 8


State 5 contains 1 shift/reduce conflict.


11 terminals, 5 nonterminals
13 grammar rules, 20 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  Realnumber
     3    258  Plus
     4    259  Minus
     5    260  Mult
     6    261  Div
     7    262  Left
     8    263  Right
     9    264  UMINUS
    10     10  '\n'
    11    265  $accept
    12    266  statement
    13    267  expression
    14    268  factor
    15    269  primary
